--- a/style/style.css
+++ b/style/style.css
@@ -93,4 +93,21 @@ h1 {
      font-weight: bold;
      padding: 5px 0;
  }
+ footer {
+    font-family: var(--fonte1);
+    background-color: rgb(0, 0, 0);
+    color: rgb(218, 214, 214);
+    padding: 10px 0 10px 0;
+    font-size: small;
+    text-align: center;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;    
+
+}
+footer a:hover {
+    text-decoration: underline; 
+}
 
